[FIX] web, website: searchbar menu columns width and tooltips
This commit addresses the same issue as in https://github.com/odoo/odoo/pull/137214
which is overflowing of search bar menu items when their name is too long
while also adapting some width values and make it apply to the website
name column. It also adds a height value to the containsers so that the
bottom is no longer squished when the content overflows and finally adds
tooltips for long item names which will most likely be truncated.

opw-3963754

--- a/addons/web/static/src/search/search_bar_menu/search_bar_menu.scss
+++ b/addons/web/static/src/search/search_bar_menu/search_bar_menu.scss
@@ -6,15 +6,12 @@
     max-width: $-menu-max-width;
     .o_dropdown_container {
         border-color: $dropdown-divider-bg !important;
+        min-width: 200px;
     }
 
     @include media-breakpoint-up(lg) {
-        .o_favorite_menu {
-            max-width: calc(#{$-menu-max-width} / 3);
-        }
-
-        .o_comparison_menu + .o_favorite_menu {
-            max-width: calc(#{$-menu-max-width} / 4);
+        .o_dropdown_container {
+            max-width: calc(#{$-menu-max-width} / 6);
         }
     }
 }
